<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">联通Wifi连接器</string>
    <string name="acount">账号:</string>
    <string name="password">密码:</string>
    <string name="action_settings">Settings</string>
    <string name="acount_hint">联通手机号码</string>
    <string name="password_hint">密码</string>
    <string name="connect">确定</string>
    <string name="input_error">输入错误</string>
    <string name="intro">为了使用联通免费Wifi,你需要开通相关服务</string>
    <string name="register_method">开通方式:</string>
    <string name="register">编辑短信“TYWLAN”, 并发送到10010</string>
    <string name="forget_password">若忘记密码，请发送“CZWLAN"至10010</string>
    <string name="intro_2">一次设置，永远自动接入</string>

</resources>
