<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    >

    <LinearLayout 
        android:layout_marginTop="50dip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dip"
        android:layout_marginRight="10dip"
        android:orientation="horizontal">

    	<TextView
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:text="@string/acount" 
        	/>

    	<EditText 
    	    android:id="@+id/accountEditText"
    	    android:layout_width="0dip"
    	    android:layout_weight="1"
    	    android:layout_height="wrap_content"
        	android:hint="@string/acount_hint"
        	android:singleLine="true"
        	android:maxLength="11"
        	android:inputType="number"
    	    />
        
    </LinearLayout>

    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dip"
        android:layout_marginRight="10dip"
        android:orientation="horizontal">

    	<TextView
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:text="@string/password" 
        	/>

    	<EditText 
    	    android:id="@+id/passwordEditText"
    	    android:layout_width="0dip"
    	    android:layout_weight="1"
    	    android:layout_height="wrap_content"
        	android:hint="@string/password_hint"
        	android:singleLine="true"
        	android:maxLength="11"
        	android:inputType="numberPassword"
    	    />
        
    </LinearLayout>

    <Button 
        android:layout_marginTop="10dip"
        android:layout_width="100dip"
        android:layout_height="wrap_content"
        android:text="@string/connect"
        android:onClick="onConnectButtonClick"/>
</LinearLayout>
